Bump z-index of omnibar to prevent ext element overlap

--- a/site-root/sass/slate/modules/_omnibar.scss
+++ b/site-root/sass/slate/modules/_omnibar.scss
@@ -45,7 +45,7 @@
     position: fixed;
     right: 0;
     top: 0;
-    z-index: 2;
+    z-index: 99;
 
     a {
         color: white;
